# GUI_Template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/: BaseApplication.h  FirstWindow.h  MainApp.h  SampleData.h
Application/src/: FirstWindow.cpp  MainApp.cpp  SampleData.cpp  main.cpp
Libraries/GLFW_Library/: CMakeLists.txt
Libraries/GoogleTest_Library/: CMakeLists.txt
Libraries/ImGui_Library/: CMakeLists.txt
Testing/: CMakeLists.txt
Testing/src/: pch.cpp  test.cpp
